Refs #63833 fix tags spacing

--- a/sass/drupal/pages/_search.scss
+++ b/sass/drupal/pages/_search.scss
@@ -336,7 +336,7 @@ $search_dropdown_z: 500;
             margin-right: -1rem;
 
             >.facet-dataset_filters {
-              padding: 0 1rem;
+              margin: 0 1rem;
               width: 50%;
             }
           }
@@ -545,13 +545,14 @@ $search_dropdown_z: 500;
   }
 }
 
-.block-facet--split-facet {
+.sdh-filters-wrapper .block-facet--split-facet {
   >div {
     display: flex;
-    margin: 0 -0.075rem;
+    margin: 0 -0.25rem;
+    padding-right: 0.25rem;
 
     >div {
-      padding: 0 0.075rem;
+      padding: 0 0.25rem;
     }
   }
 }
